@@ -21,11 +21,14 @@
 # $Id$
 #
 
+GENERATED_TEXINFOS = \
+	$(srcdir)/programmers.texi \
+	$(srcdir)/parts.texi \
+	$(srcdir)/programmer_types.texi \
+	$(srcdir)/version.texi
+
 CLEANFILES = \
-	programmers.texi \
-	parts.texi \
-	programmer_types.texi \
-	version.texi \
+	$(GENERATED_TEXINFOS) \
 	stamp-vti
 
 info_TEXINFOS = avrdude.texi
@@ -34,7 +37,7 @@ all-local: info html ps pdf
 
 html: avrdude-html/avrdude.html
 
-avrdude-html/avrdude.html: $(srcdir)/$(info_TEXINFOS) $(srcdir)/programmers.texi $(srcdir)/parts.texi $(srcdir)/programmer_types.texi
+avrdude-html/avrdude.html: $(srcdir)/$(info_TEXINFOS) $(GENERATED_TEXINFOS)
 	texi2html -split_node $(srcdir)/$(info_TEXINFOS)
 	if [ -e ./avrdude.html -o -e ./avrdude_1.html ]; then \
 	 mkdir -p avrdude-html ; \
@@ -43,27 +46,27 @@ avrdude-html/avrdude.html: $(srcdir)/$(info_TEXINFOS) $(srcdir)/programmers.texi
 	 mv -f avrdude avrdude-html; \
 	fi;
 
-avrdude.info: programmers.texi parts.texi programmer_types.texi
-avrdude.dvi: programmers.texi parts.texi programmer_types.texi
-avrdude.pdf: programmers.texi parts.texi programmer_types.texi
+$(srcdir)/avrdude.info: $(GENERATED_TEXINFOS)
+$(srcdir)/avrdude.dvi: $(GENERATED_TEXINFOS)
+$(srcdir)/avrdude.pdf: $(GENERATED_TEXINFOS)
 
 # if it does not exist make this first
 ../avrdude$(EXEEXT):
 	$(MAKE) -C .. avrdude$(EXEEXT)
 
-programmers.texi: ../avrdude$(EXEEXT) ../avrdude.conf Makefile
+$(srcdir)/programmers.texi: ../avrdude$(EXEEXT) ../avrdude.conf Makefile
 	../avrdude$(EXEEXT) -C ../avrdude.conf -c \? 2>&1 \
 	| $(AWK) '$$2 ~ /^=$$/ {printf("@item @code{%s} @tab %s\n",$$1,gensub("[^=]+=[ \t]*","",1))}' \
 	| sed "s# *,\? *<\?\(http://[^ \t>]*\)>\?#,@*\n@url{\1}#g" \
 	>programmers.texi
 
-programmer_types.texi: ../avrdude$(EXEEXT) ../avrdude.conf Makefile
+$(srcdir)/programmer_types.texi: ../avrdude$(EXEEXT) ../avrdude.conf Makefile
 	../avrdude$(EXEEXT) -C ../avrdude.conf -c \?type 2>&1 \
 	| $(AWK) '$$2 ~ /^=$$/ {printf("@item @code{%s} @tab %s\n",$$1,gensub("[^=]+=[ \t]*","",1))}' \
 	| sed "s#<\?\(http://[^ \t,>]*\)>\?#@url{\1}#g" \
 	>programmer_types.texi
 
-parts.texi: ../avrdude$(EXEEXT) ../avrdude.conf parts_comments.txt Makefile
+$(srcdir)/parts.texi: ../avrdude$(EXEEXT) ../avrdude.conf parts_comments.txt Makefile
 	../avrdude$(EXEEXT) -C ../avrdude.conf -p \? 2>&1 \
 	| $(AWK) '$$2 ~ /^=$$/ {printf("@item @code{%s} @tab %s\n",$$1,$$3)}' \
 	| sed -e "`sed 's:\([^ \t]*\)[ \t]*\(.*\):s/\1$$/\1 \2/g:g' <parts_comments.txt`" \
